--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ python:
   - "2.7"
   - "3.5"
 # command to install dependencies
-install: "pip install pytest pytest-cov future"
+install: "pip install pytest future pytest-pep8 pytest-cov"
 # command to run tests
-script: python -m pytest -v --durations=10 --cov="ancp"
+script: python -m pytest -v --cov ancp --cov-report term-missing
+after_success:
+  - coveralls
