--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "2.7"
   - "3.5"
 # command to install dependencies
-install: "pip install pytest future pytest-pep8 pytest-cov"
+install: "pip install pytest future pytest-pep8 pytest-cov python-coveralls"
 # command to run tests
 script: python -m pytest -v --cov ancp --cov-report term-missing
 after_success:
